--- a/views/booking_activities_schedule.erb
+++ b/views/booking_activities_schedule.erb
@@ -5,5 +5,5 @@
   <div id="calendar" class="top-margin smaller_text">
   </div>
 </div>
-<div id="dialog_container" class="smaller_text" style="background: white; width: 800px; height:400px; overflow-y: scroll; display:none">
+<div id="dialog_container" class="smaller_text" style="background: white; min-width: 900px; min-height:450px; overflow-y: scroll; display:none">
 </div>
